# ogre-next

./: CMakeLists.txt
Components/: CMakeLists.txt
Components/Hlms/HlmsExt/: .clang-format  CMakeLists.txt
Components/Hlms/HlmsExt/include/: OgreHlmsBatchData.h  OgreHlmsBatchDataPool.h  OgreHlmsBatchDataPoolInterface.h  OgreHlmsBufferHandler.h  OgreHlmsBufferHandlerCommon.h  OgreHlmsBufferPool.h  OgreHlmsBufferPoolInterface.h  OgreHlmsConstBufferHandler.h  OgreHlmsExt.h  OgreHlmsExtExport.h  OgreHlmsExtPrerequisites.h  OgreHlmsMaterialBufferPool.h  OgreHlmsReadOnlyBufferHandler.h  OgreHlmsUavBufferHandler.h  OgreHlmsUavBufferHandlerFwd.h  OgreHlmsUavBufferPool.h  OgreHlsl2Glsl.h
Components/Hlms/HlmsExt/src/: OgreHlmsBatchData.cpp  OgreHlmsBatchDataPool.cpp  OgreHlmsBatchDataPoolInterface.cpp  OgreHlmsBufferHandler.cpp  OgreHlmsBufferHandlerCommon.cpp  OgreHlmsBufferPool.cpp  OgreHlmsBufferPoolInterface.cpp  OgreHlmsConstBufferHandler.cpp  OgreHlmsExt.cpp  OgreHlmsMaterialBufferPool.cpp  OgreHlmsReadOnlyBufferHandler.cpp  OgreHlmsUavBufferHandler.cpp  OgreHlmsUavBufferPool.cpp  OgreHlsl2Glsl.cpp
OgreMain/include/: OgreHlms.h  OgrePrerequisites.h  OgreRenderSystem.h  OgreRootLayout.h  OgreRootLayoutDefinition.h
OgreMain/include/CommandBuffer/: OgreCbCommon.h  OgreCbSetUavs.h  OgreCommandBuffer.h
OgreMain/include/Vao/: OgreVaoManager.h
OgreMain/src/: OgreHlms.cpp  OgreRootLayout.cpp  OgreRootLayoutDefinition.cpp
OgreMain/src/CommandBuffer/: OgreCbSetUavs.cpp  OgreCommandBuffer.cpp
RenderSystems/Direct3D11/include/: OgreD3D11RenderSystem.h
RenderSystems/Direct3D11/src/: OgreD3D11RenderSystem.cpp
RenderSystems/GL3Plus/include/: OgreGL3PlusRenderSystem.h
RenderSystems/GL3Plus/src/: OgreGL3PlusRenderSystem.cpp
Samples/2.0/: CMakeLists.txt
(+53 files in other folders)
